[package]
name = "fissure"
version = "0.1.0"
edition = "2024"
license-file = "LICENSE"
description = "Performant and numerically robust matrix decompositions of small matrices."
repository = "https://github.com/janbridley/fissure"
keywords = ["linear-algebra", "matrix-decomposition", "svd", "lapack"]
categories = ["mathematics", "science"]

[dependencies]
lasv2 = { path = "lasv2" }
num-traits = "0.2.19"

[dev-dependencies]
approx = "0.5.1"
divan = "0.1.21"
faer = "0.22.6"
rand = { version = "0.10.0", default-features = false, features = ["std", "std_rng"] }
rstest = "0.26.1"

[[bench]]
name = "svd"
harness = false

[lints]
workspace = true

[workspace]
resolver = "2"
members = ["lasv2"]

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
cargo = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

multiple_crate_versions = "allow"
many_single_char_names = "allow"
cast_precision_loss = "allow"
float_cmp = "allow"
similar_names = "allow"
inline_always = "allow"

allow_attributes_without_reason = "warn"
exhaustive_enums = "warn"
impl_trait_in_params = "warn"
missing_docs_in_private_items = "warn"
missing_inline_in_public_items = "warn"
panic = "warn"
partial_pub_fields = "warn"
print_stderr = "warn"
print_stdout = "warn"
redundant_type_annotations = "warn"
renamed_function_params = "warn"
same_name_method = "warn"
todo = "warn"
unwrap_used = "warn"

fallible_impl_from = "warn"
needless_collect = "warn"
needless_pass_by_ref_mut = "warn"
